# hex-ai

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
docs/config/: Doxyfile
include/hex-ai/: main.cpp
include/hex-ai/GameSolve/: AlphaBeta.hpp  DeepNodeSolve.hpp  HexUtil.hpp  Maximin.hpp
include/hex-ai/GameState/: Action.hpp  HexState.hpp  enums.hpp  io.hpp
include/hex-ai/Io/: GamestateBool0.hpp  file_types.hpp  info_file.hpp  io_enums.hpp
include/hex-ai/Players/: util.hpp
include/hex-ai/Util/: LRUCache.hpp  generated_games_combiner.hpp  io.hpp
include/hex-ai/Util/FileIO/: GamestateBool_1.hpp  basic_serialization.hpp  file_type_enum.hpp  file_types.hpp  info_file.hpp
scripts/: export_compile_commands.sh
src/: CMakeLists.txt  file_combine.cpp  generate_example_games.cpp  main.cpp  play_two_players.cpp  train_bottom_model.cpp  verify_game_file.cpp
src/GameSolve/: AlphaBeta.cpp  AlphaBeta.hpp  DeepNodeSolve.hpp  HexUtil.cpp  LRUCache.hpp  Maximin.hpp
src/GameState/: GameState.hpp  HexState.cpp  HexState.hpp  gameplay.hpp  io.cpp
src/Games/Hex/: HexState.hpp
src/Games/TicTacToe/: TTT_Actions.cpp  TTT_Actions.hpp  TTT_State.cpp  TTT_State.hpp  TTT_State.hpp.old  TTT_StateBase.hpp  TicTacToe.hpp
src/Players/: util.cpp
src/Search/: SearchProblem.hpp
src/Util/: generated_games_combiner.cpp  io.cpp
src/Util/FileIO/: GamestateBool_1.cpp  basic_serialization.cpp  file_types.cpp  info_file.cpp
src/app/: file_combine.cpp  generate_example_games.cpp  hexstate_to_string.cpp  info_file.cpp  play_two_players.cpp  verify_game_file.cpp
src/python/: data_to_TFRecord.py  train.py
test/: CMakeLists.txt  hello_test.cpp  test.cpp  test_HexState.cpp  test_HexStateIO.cpp
test/GameSolve/: CMakeLists.txt  test_hex_rand_moves.cpp
test/GameSolve/AlphaBeta/: CMakeLists.txt  test_AlphaBeta_1.cpp
test/GameState/: CMakeLists.txt
test/GameState/Action/: CMakeLists.txt  test_action.cpp
test/GameState/Enums/: CMakeLists.txt  test_enums.cpp
test/GameState/HexState/: CMakeLists.txt  test_Constructor.cpp  test_HexState.cpp  test_action_iterator.cpp  test_cereal.cpp  test_get_actions.cpp  test_make_moves.cpp  test_who_won.cpp
test/Io/: CMakeLists.txt
test/Io/GamestateBool0/: CMakeLists.txt  test_GamestateBool0.cpp
